# Ray_Tracer_Graphics

./: .gitignore  README.md
Assignment 1/: Makefile  README.md  box.cpp  box.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  cylindrical.cpp  cylindrical.hpp  global.cpp  global.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  planar.cpp  planar.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  quadric.cpp  quadric.hpp  ray.cpp  ray.hpp  raytrace.cpp  raytrace.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  spherical.cpp  spherical.hpp  texture.cpp  (+3 more)
Assignment 1/json/: good_polys.json  scene.json  scene2.json  scene3.json  scene4_simple.json
Assignment 1/json/more/: scene.json  scene2.json  scene3.json  scene4.json  scene4x.json
Assignment 1/json/more/transform/: scene.json  scene3.json  scene4.json  scene4x.json  scene5.json
Assignment 1/opengl_visualization/: CMakeLists.txt  README.md
Assignment 1/opengl_visualization/src/: gen_scene  make_scene.cpp
Assignment 1/test/: pexels.ppm
Assignment 1/test/textures/: 1.ppm  2.ppm  4.ppm
Assignment 1/test/visualization/: obl.ob  obl3.ob  oblx.ob  out.ob
